Fix typo in Github URL

--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ theme = "codex"
   # Links to your social accounts, comment/uncomment as needed. Icons will be displayed for those specified.
   email = "mailto:adam@aleonard.net"
   # twitter = "https://twitter.com/<your handle>"
-  github = "https://github.com/aleonard"
+  github = "https://github.com/ableonard"
   # facebook = "https://facebook.com/<your handle>"
   # gitlab = "https://gitlab.com/<your handle>"
   # instagram = "https://instagram.com/<your handle>"
