--- a/config.toml
+++ b/config.toml
@@ -56,6 +56,13 @@ theme = "codex"
   url = "/"
   weight = 1
 
+[[menu.main]]
+  identifier = "resume"
+  name = "resume"
+  title = "Resume"
+  url = "/resume"
+  weight = 2
+
 #[[menu.main]]
 #  identifier = "blog"
 #  name = "blog"
